--- a/YukariProject/Yukari/src/main/res/xml/pref.xml
+++ b/YukariProject/Yukari/src/main/res/xml/pref.xml
@@ -17,10 +17,10 @@
             android:key="pref_font_timeline"
             android:title="文字サイズの設定"
             android:summary="タイムライン上の文字サイズを設定します"
+            android:dialogMessage="デフォルト=14"
             android:inputType="number"
             android:defaultValue="14"
-            android:maxLength="2"
-            android:enabled="false"/>
+            android:maxLength="2"/>
         <ListPreference
             android:key="pref_mode_multiline"
             android:title="複数行ツイートの表示方法"
