--- a/Yukari/src/main/res/layout/row_tweet.xml
+++ b/Yukari/src/main/res/layout/row_tweet.xml
@@ -70,7 +70,7 @@
         android:src="@drawable/ic_secure"
         android:layout_alignBottom="@+id/tweet_timestamp"
         android:layout_alignParentLeft="true"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:layout_marginLeft="-4dp"
         android:layout_marginBottom="-2dp" />
 
