--- a/YukariProject/Yukari/src/main/res/layout/activity_main.xml
+++ b/YukariProject/Yukari/src/main/res/layout/activity_main.xml
@@ -49,6 +49,9 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:id="@+id/tvMainTab"
+                    android:scrollHorizontally="true"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:layout_gravity="center_vertical"
                     android:paddingLeft="6dp"
                     android:focusable="true"
@@ -67,14 +70,24 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                    android:layout_weight="4" />
+
+                <ImageButton
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:id="@+id/ibClose"
+                    android:src="@drawable/ic_close"
+                    android:layout_weight="2"
+                    android:focusable="false"
+                    android:visibility="invisible"
+                    android:background="@drawable/selector_key_background"/>
 
                 <ImageButton
                     android:layout_width="90dp"
                     android:layout_height="match_parent"
                     android:id="@+id/ibSearch"
                     android:src="@drawable/ic_search"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:focusable="false"
                     android:background="@drawable/selector_key_background"/>
 
@@ -83,7 +96,7 @@
                     android:layout_height="match_parent"
                     android:id="@+id/ibMenu"
                     android:src="@drawable/ic_action_overflow"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:focusable="false"
                     android:background="@drawable/selector_key_background"/>
             </LinearLayout>
