--- a/Yukari/src/main/res/values-v11/themes_yukaritheme.xml
+++ b/Yukari/src/main/res/values-v11/themes_yukaritheme.xml
@@ -3,47 +3,20 @@
 <!-- Generated with http://android-holo-colors.com -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <style name="YukariTheme" parent="Theme.AppCompat.Light">
+    <style name="YukariTheme" parent="Theme.AppCompat.Light">
 
-    <item name="android:actionBarStyle">@style/ActionBarYukariTheme</item>
-
-    <item name="android:editTextBackground">@drawable/yukaritheme_edit_text_holo_light</item>
-
-    <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewYukariTheme</item>
-
-    <item name="android:listChoiceIndicatorMultiple">@drawable/yukaritheme_btn_check_holo_light</item>
-
-    <item name="android:listChoiceIndicatorSingle">@drawable/yukaritheme_btn_radio_holo_light</item>
-
-    <item name="android:buttonStyle">@style/ButtonYukariTheme</item>
-
-    <item name="android:imageButtonStyle">@style/ImageButtonYukariTheme</item>
-
-    <item name="android:dropDownSpinnerStyle">@style/SpinnerYukariTheme</item>
-
-    <item name="android:progressBarStyleHorizontal">@style/ProgressBarYukariTheme</item>
-
-    <item name="android:seekBarStyle">@style/SeekBarYukariTheme</item>
-
-    <item name="android:buttonStyleToggle">@style/ToggleYukariTheme</item>
-
-    <item name="android:listChoiceBackgroundIndicator">@drawable/yukaritheme_list_selector_holo_light</item>
-
-    <item name="android:activatedBackgroundIndicator">@drawable/yukaritheme_activated_background_holo_light</item>
-
-    <item name="android:fastScrollThumbDrawable">@drawable/yukaritheme_fastscroll_thumb_holo</item>
-
-  </style>
-
-    <style name="YukariDialogTheme" parent="android:Theme.Holo.Light.Dialog">
+        <item name="android:actionBarStyle">@style/ActionBarYukariTheme</item>
 
         <item name="android:editTextBackground">@drawable/yukaritheme_edit_text_holo_light</item>
 
         <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewYukariTheme</item>
 
-        <item name="android:listChoiceIndicatorMultiple">@drawable/yukaritheme_btn_check_holo_light</item>
+        <item name="android:listChoiceIndicatorMultiple">
+            @drawable/yukaritheme_btn_check_holo_light
+        </item>
 
-        <item name="android:listChoiceIndicatorSingle">@drawable/yukaritheme_btn_radio_holo_light</item>
+        <item name="android:listChoiceIndicatorSingle">@drawable/yukaritheme_btn_radio_holo_light
+        </item>
 
         <item name="android:buttonStyle">@style/ButtonYukariTheme</item>
 
@@ -57,11 +30,54 @@
 
         <item name="android:buttonStyleToggle">@style/ToggleYukariTheme</item>
 
-        <item name="android:listChoiceBackgroundIndicator">@drawable/yukaritheme_list_selector_holo_light</item>
+        <item name="android:listChoiceBackgroundIndicator">
+            @drawable/yukaritheme_list_selector_holo_light
+        </item>
 
-        <item name="android:activatedBackgroundIndicator">@drawable/yukaritheme_activated_background_holo_light</item>
+        <item name="android:activatedBackgroundIndicator">
+            @drawable/yukaritheme_activated_background_holo_light
+        </item>
 
-        <item name="android:fastScrollThumbDrawable">@drawable/yukaritheme_fastscroll_thumb_holo</item>
+        <item name="android:fastScrollThumbDrawable">@drawable/yukaritheme_fastscroll_thumb_holo
+        </item>
+
+    </style>
+
+    <style name="YukariDialogTheme" parent="android:Theme.Holo.Light.Dialog">
+
+        <item name="android:editTextBackground">@drawable/yukaritheme_edit_text_holo_light</item>
+
+        <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewYukariTheme</item>
+
+        <item name="android:listChoiceIndicatorMultiple">
+            @drawable/yukaritheme_btn_check_holo_light
+        </item>
+
+        <item name="android:listChoiceIndicatorSingle">@drawable/yukaritheme_btn_radio_holo_light
+        </item>
+
+        <item name="android:buttonStyle">@style/ButtonYukariTheme</item>
+
+        <item name="android:imageButtonStyle">@style/ImageButtonYukariTheme</item>
+
+        <item name="android:dropDownSpinnerStyle">@style/SpinnerYukariTheme</item>
+
+        <item name="android:progressBarStyleHorizontal">@style/ProgressBarYukariTheme</item>
+
+        <item name="android:seekBarStyle">@style/SeekBarYukariTheme</item>
+
+        <item name="android:buttonStyleToggle">@style/ToggleYukariTheme</item>
+
+        <item name="android:listChoiceBackgroundIndicator">
+            @drawable/yukaritheme_list_selector_holo_light
+        </item>
+
+        <item name="android:activatedBackgroundIndicator">
+            @drawable/yukaritheme_activated_background_holo_light
+        </item>
+
+        <item name="android:fastScrollThumbDrawable">@drawable/yukaritheme_fastscroll_thumb_holo
+        </item>
 
     </style>
 
