--- a/Yukari/src/main/res/values/styles_yukaritheme.xml
+++ b/Yukari/src/main/res/values/styles_yukaritheme.xml
@@ -3,88 +3,103 @@
 <!-- Generated with http://android-holo-colors.com -->
 <resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
-  <style name="ActionBarYukariTheme" parent="Widget.AppCompat.ActionBar">
-      <item name="android:background">@drawable/key_color</item>
-      <item name="android:titleTextStyle" tools:ignore="NewApi">@style/ActionBarYukariTheme.TitleText</item>
-      <item name="titleTextStyle" tools:ignore="NewApi">@style/ActionBarYukariTheme.TitleText</item>
-  </style>
-    
-  <style name="ActionBarYukariTheme.TitleText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-      <item name="android:textColor">#FFFFFF</item>
-  </style>
+    <style name="TransparentActionBarYukariTheme" parent="ActionBarYukariTheme">
+        <item name="android:background">@drawable/status_bar_color</item>
+    </style>
 
-  <style name="EditTextYukariTheme" parent="android:Widget.EditText">
-	  <item name="android:background">@drawable/yukaritheme_edit_text_holo_light</item>
-	  <item name="android:textColor">#000000</item>
-  </style>
+    <style name="ActionBarYukariTheme" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@drawable/key_color</item>
+        <item name="android:titleTextStyle" tools:ignore="NewApi">
+            @style/ActionBarYukariTheme.TitleText
+        </item>
+        <item name="titleTextStyle" tools:ignore="NewApi">@style/ActionBarYukariTheme.TitleText
+        </item>
+    </style>
 
-  <style name="AutoCompleteTextViewYukariTheme" parent="android:Widget.AutoCompleteTextView">
-      <item name="android:dropDownSelector">@drawable/yukaritheme_list_selector_holo_light</item>
-	  <item name="android:background">@drawable/yukaritheme_edit_text_holo_light</item>
-	  <item name="android:textColor">#000000</item>
-  </style>
+    <style name="ActionBarYukariTheme.TitleText" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 
-  <style name="CheckBoxYukariTheme" parent="android:Widget.CompoundButton.CheckBox">
-      <item name="android:button">@drawable/yukaritheme_btn_check_holo_light</item>
-  </style>
+    <style name="EditTextYukariTheme" parent="android:Widget.EditText">
+        <item name="android:background">@drawable/yukaritheme_edit_text_holo_light</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 
-  <style name="RadioButtonYukariTheme" parent="android:Widget.CompoundButton.RadioButton">
-      <item name="android:button">@drawable/yukaritheme_btn_radio_holo_light</item>
-  </style>
+    <style name="AutoCompleteTextViewYukariTheme" parent="android:Widget.AutoCompleteTextView">
+        <item name="android:dropDownSelector">@drawable/yukaritheme_list_selector_holo_light</item>
+        <item name="android:background">@drawable/yukaritheme_edit_text_holo_light</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 
-  <style name="ButtonYukariTheme" parent="android:Widget.Button">
-	  <item name="android:background">@drawable/yukaritheme_btn_default_holo_light</item>
-	  <item name="android:minHeight">48dip</item>
-	  <item name="android:minWidth">64dip</item>
-	  <item name="android:textColor">#000000</item>
-  </style>
+    <style name="CheckBoxYukariTheme" parent="android:Widget.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/yukaritheme_btn_check_holo_light</item>
+    </style>
 
-  <style name="ImageButtonYukariTheme" parent="android:Widget.ImageButton">
-	  <item name="android:background">@drawable/yukaritheme_btn_default_holo_light</item>
-  </style>
+    <style name="RadioButtonYukariTheme" parent="android:Widget.CompoundButton.RadioButton">
+        <item name="android:button">@drawable/yukaritheme_btn_radio_holo_light</item>
+    </style>
 
-  <style name="SpinnerYukariTheme" parent="android:Widget.Spinner">
-      <item name="android:background">@drawable/yukaritheme_spinner_background_holo_light</item>
-      <item name="android:dropDownSelector">@drawable/yukaritheme_list_selector_holo_light</item>
-  </style>
+    <style name="ButtonYukariTheme" parent="android:Widget.Button">
+        <item name="android:background">@drawable/yukaritheme_btn_default_holo_light</item>
+        <item name="android:minHeight">48dip</item>
+        <item name="android:minWidth">64dip</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 
-  <style name="SpinnerDropDownItemYukariTheme" parent="android:Widget.DropDownItem.Spinner">
-      <item name="android:checkMark">@drawable/yukaritheme_btn_radio_holo_light</item>
-  </style>
-  <style name="ProgressBarYukariTheme" parent="android:Widget.ProgressBar.Horizontal">
-      <item name="android:progressDrawable">@drawable/yukaritheme_progress_horizontal_holo_light</item>
-      <item name="android:indeterminateDrawable">@drawable/yukaritheme_progress_indeterminate_horizontal_holo_light</item>
-      <item name="android:minHeight">16dip</item>
-      <item name="android:maxHeight">16dip</item>
-  </style>
+    <style name="ImageButtonYukariTheme" parent="android:Widget.ImageButton">
+        <item name="android:background">@drawable/yukaritheme_btn_default_holo_light</item>
+    </style>
 
-  <style name="SeekBarYukariTheme" parent="android:Widget.SeekBar">
-      <item name="android:progressDrawable">@drawable/yukaritheme_scrubber_progress_horizontal_holo_light</item>
-      <item name="android:indeterminateDrawable">@drawable/yukaritheme_scrubber_progress_horizontal_holo_light</item>
-      <item name="android:minHeight">13dip</item>
-      <item name="android:maxHeight">13dip</item>
-      <item name="android:thumb">@drawable/yukaritheme_scrubber_control_selector_holo_light</item>
-      <item name="android:thumbOffset">16dip</item>
-      <item name="android:paddingLeft">16dip</item>
-      <item name="android:paddingRight">16dip</item>
-  </style>
+    <style name="SpinnerYukariTheme" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/yukaritheme_spinner_background_holo_light</item>
+        <item name="android:dropDownSelector">@drawable/yukaritheme_list_selector_holo_light</item>
+    </style>
 
-  <style name="ToggleYukariTheme" parent="android:Widget.Button.Toggle">
-      <item name="android:background">@drawable/yukaritheme_btn_toggle_holo_light</item>
-      <item name="android:minHeight">48dip</item>
-	  <item name="android:textColor">#000000</item>
-  </style>
+    <style name="SpinnerDropDownItemYukariTheme" parent="android:Widget.DropDownItem.Spinner">
+        <item name="android:checkMark">@drawable/yukaritheme_btn_radio_holo_light</item>
+    </style>
 
-  <style name="ListViewYukariTheme" parent="android:Widget.ListView">
-      <item name="android:listSelector">@drawable/yukaritheme_list_selector_holo_light</item>
-  </style>
+    <style name="ProgressBarYukariTheme" parent="android:Widget.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/yukaritheme_progress_horizontal_holo_light
+        </item>
+        <item name="android:indeterminateDrawable">
+            @drawable/yukaritheme_progress_indeterminate_horizontal_holo_light
+        </item>
+        <item name="android:minHeight">16dip</item>
+        <item name="android:maxHeight">16dip</item>
+    </style>
 
-  <style name="ListViewYukariTheme.White" parent="android:Widget.ListView.White">
-      <item name="android:listSelector">@drawable/yukaritheme_list_selector_holo_light</item>
-  </style>
+    <style name="SeekBarYukariTheme" parent="android:Widget.SeekBar">
+        <item name="android:progressDrawable">
+            @drawable/yukaritheme_scrubber_progress_horizontal_holo_light
+        </item>
+        <item name="android:indeterminateDrawable">
+            @drawable/yukaritheme_scrubber_progress_horizontal_holo_light
+        </item>
+        <item name="android:minHeight">13dip</item>
+        <item name="android:maxHeight">13dip</item>
+        <item name="android:thumb">@drawable/yukaritheme_scrubber_control_selector_holo_light</item>
+        <item name="android:thumbOffset">16dip</item>
+        <item name="android:paddingLeft">16dip</item>
+        <item name="android:paddingRight">16dip</item>
+    </style>
 
-  <style name="SpinnerItemYukariTheme" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
-      <item name="android:textColor">#000000</item>
-  </style>
+    <style name="ToggleYukariTheme" parent="android:Widget.Button.Toggle">
+        <item name="android:background">@drawable/yukaritheme_btn_toggle_holo_light</item>
+        <item name="android:minHeight">48dip</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="ListViewYukariTheme" parent="android:Widget.ListView">
+        <item name="android:listSelector">@drawable/yukaritheme_list_selector_holo_light</item>
+    </style>
+
+    <style name="ListViewYukariTheme.White" parent="android:Widget.ListView.White">
+        <item name="android:listSelector">@drawable/yukaritheme_list_selector_holo_light</item>
+    </style>
+
+    <style name="SpinnerItemYukariTheme" parent="android:TextAppearance.Widget.TextView.SpinnerItem">
+        <item name="android:textColor">#000000</item>
+    </style>
 
 </resources>
