--- a/YukariProject/Yukari/src/main/res/layout/activity_main.xml
+++ b/YukariProject/Yukari/src/main/res/layout/activity_main.xml
@@ -70,7 +70,17 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="4" />
+                    android:layout_weight="5" />
+
+                <ImageButton
+                    android:layout_width="90dp"
+                    android:layout_height="match_parent"
+                    android:id="@+id/ibStream"
+                    android:src="@drawable/ic_play"
+                    android:layout_weight="2"
+                    android:focusable="false"
+                    android:visibility="invisible"
+                    android:background="@drawable/selector_key_background"/>
 
                 <ImageButton
                     android:layout_width="90dp"
