--- a/Yukari/src/main/res/layout/activity_main.xml
+++ b/Yukari/src/main/res/layout/activity_main.xml
@@ -112,4 +112,53 @@
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/llQuickTweet"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_alignTop="@+id/tweetgesture"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/key_color"
+        android:visibility="gone"
+        android:layout_marginRight="36dp">
+
+        <ImageButton
+            android:layout_width="38dp"
+            android:layout_height="match_parent"
+            android:id="@+id/ibCloseTweet"
+            android:src="@drawable/ic_close"
+            android:background="@drawable/selector_key_background"
+            android:paddingRight="4dp"/>
+
+        <ImageButton
+            android:layout_width="32dp"
+            android:layout_height="match_parent"
+            android:id="@+id/ibAccount"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/selector_key_background"
+            android:scaleType="centerInside"
+            android:src="@drawable/yukatterload" />
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/etTweetInput"
+            android:layout_weight="1"
+            android:paddingLeft="8dp"
+            android:textSize="18sp"
+            android:singleLine="true"/>
+
+        <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
+            android:id="@+id/ibTweet"
+            android:src="@drawable/ic_prof_tweets"
+            android:background="@drawable/selector_key_background" />
+    </LinearLayout>
 </RelativeLayout>
