--- a/Yukari/src/main/res/layout/dialog_search.xml
+++ b/Yukari/src/main/res/layout/dialog_search.xml
@@ -27,9 +27,25 @@
             android:background="@drawable/selector_key_light_background" />
     </LinearLayout>
 
-    <ListView
+    <FrameLayout
+        android:id="@+id/frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!--<android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_marginTop="4dp" />
+        android:layout_marginTop="4dp" >
+
+        <android.support.v4.view.PagerTabStrip
+            android:id="@+id/pager_title_strip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:paddingBottom="6dp"
+            android:paddingTop="6dp"
+            android:textColor="@drawable/key_color"/>
+
+    </android.support.v4.view.ViewPager>-->
 </LinearLayout>
