ウィンドウサイズがIMEによって可変されるよう修正

--- a/Yukari/src/main/res/layout/activity_snpicker.xml
+++ b/Yukari/src/main/res/layout/activity_snpicker.xml
@@ -26,7 +26,7 @@
 
     <ListView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:id="@+id/lvSNPick"
             android:layout_weight="1"
             android:fastScrollEnabled="true"/>
