プロフィール編集画面の見た目を作成

--- a/Yukari/src/main/res/values-v11/styles_yukaritheme.xml
+++ b/Yukari/src/main/res/values-v11/styles_yukaritheme.xml
@@ -5,6 +5,7 @@
 
     <style name="ActionBarYukariTheme" parent="Widget.AppCompat.ActionBar">
         <item name="android:background">@drawable/key_color</item>
+        <item name="backgroundSplit">@drawable/key_color</item>
         <item name="android:titleTextStyle">@style/ActionBarYukariTheme.TitleText</item>
     </style>
 
