飯テロ.inサムネイル展開対応

--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -37,6 +37,11 @@
             android:key="pref_prev_time"
             android:title="時間を指定してサムネ非表示"
             android:summary="特定の時間帯だけサムネイルを隠す設定をします"/>
+        <CheckBoxPreference
+            android:key="pref_prev_mstrin"
+            android:title="飯テロ.inサムネイル展開"
+            android:summary="飯テロ.inのURLでもサムネイルを表示しようとします"
+            android:defaultValue="true"/>
         <!--<CheckBoxPreference
             android:key="pref_prev_mosaic"
             android:title="めしてろモザイク"
