--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -72,6 +72,16 @@
             android:defaultValue="5"/>
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="投稿設定">
+        <ListPreference
+            android:key="pref_upload_size"
+            android:title="アップロード画像の圧縮"
+            android:summary="長辺の長さが設定値を超える場合にリサイズします"
+            android:entries="@array/pref_upload_size_entries"
+            android:entryValues="@array/pref_upload_size_values"
+            android:defaultValue="960"/>
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="デバッグ設定">
         <CheckBoxPreference
             android:key="pref_show_received"
